docs: add example for: kms_alias

--- a/templates/resources/kms_alias.md.tmpl
+++ b/templates/resources/kms_alias.md.tmpl
@@ -12,7 +12,8 @@ description: |-
 ## Example Usage
 
 ### KMS Alias
-Description about the first example
+To use awscc_kms_alias:
+
 {{ tffile (printf "examples/resources/%s/kms_alias.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
