docs: add example for: kms_alias

--- a/templates/resources/kms_alias.md.tmpl
+++ b/templates/resources/kms_alias.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### KMS Alias
-To use awscc_kms_alias:
+To use `awscc_kms_alias` with sample `awscc_kms_key`:
 
 {{ tffile (printf "examples/resources/%s/kms_alias.tf" .Name)}}
 
