update lower case in example

--- a/templates/resources/ec2_vpc.md.tmpl
+++ b/templates/resources/ec2_vpc.md.tmpl
@@ -11,15 +11,15 @@ description: |-
 
 ## Example Usage
 
-### Basic Usage
+### Basic usage
 To create a VPC
 {{ tffile (printf "examples/resources/%s/ec2_vpc.tf" .Name)}}
 
-### Basic Usage with tags
+### Basic usage with tags
 To create a VPC with tags
 {{ tffile (printf "examples/resources/%s/ec2_vpc_tags.tf" .Name)}}
 
-### Advanced Usage 
+### Advanced usage 
 To create a VPC with CIDR from AWS IPAM
 {{ tffile (printf "examples/resources/%s/ec2_vpc_ipam.tf" .Name)}}
 
