remove name ref

--- a/templates/resources/opensearchserverless_security_config.md.tmpl
+++ b/templates/resources/opensearchserverless_security_config.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### Create a security configuration that specifies a SAML provider
-The following example specifies an OpenSearch Serverless SAML provider named my-provider with a custom group attribute ALLGroups.
+The following example specifies an OpenSearch Serverless SAML provider with a custom group attribute ALLGroups.
 {{ tffile (printf "examples/resources/%s/security_config.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
