docs: add example for:awscc_ec2_volume

--- a/templates/resources/ec2_volume.md.tmpl
+++ b/templates/resources/ec2_volume.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### usage
-To create a volume with tags
+To create ec2 volume with tags
 {{ tffile (printf "examples/resources/%s/volume_basic.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
