docs: add example for:awscc_ec2_vpc_endpoint

--- a/templates/resources/ec2_vpc_endpoint.md.tmpl
+++ b/templates/resources/ec2_vpc_endpoint.md.tmpl
@@ -11,15 +11,14 @@ description: |-
 
 ## Example Usage
 
-### Basic usage
-To create a VPC
+To create a VPC endpoint for S3
 {{ tffile (printf "examples/resources/%s/vpc_endpoint_basic.tf" .Name)}}
 
 ### Interface Endpoint Type
 To create a VPC Endpoint with Interface type
 {{ tffile (printf "examples/resources/%s/vpc_endpoint_interface_type.tf" .Name)}}
 
-### Gateway Endpoint Type
+### Gateway Load Balancer Endpoint Type
 To create a VPC Endpoint with Gateway LB
 {{ tffile (printf "examples/resources/%s/vpc_endpoint_gateway_type.tf" .Name)}}
 
