--- a/templates/resources/wafv2_logging_configuration.md.tmpl
+++ b/templates/resources/wafv2_logging_configuration.md.tmpl
@@ -13,9 +13,17 @@ description: |-
 
 ### Basic usage
 
-Creates a WAFv2 Web ACL Logging Configuration resource. Note that AWS Provider resource for [aws_wafv2_web_acl](https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/wafv2_web_acl) is used.
+Creates a WAFv2 Web ACL Logging Configuration resource. Note that AWS Provider resources for [aws_wafv2_web_acl](https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/wafv2_web_acl) and [aws_cloudwatch_log_group] (https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/cloudwatch_log_group) are used.
 
 {{ tffile (printf "examples/resources/%s/wafv2_logging_configuration.tf" .Name)}}
+
+### With Logging Filter 
+
+{{ tffile (printf "examples/resources/%s/wafv2_logging_configuration_logging_filter.tf" .Name)}}
+
+### With Redacted Fields 
+
+{{ tffile (printf "examples/resources/%s/wafv2_logging_configuration_redacted_fields.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
