docs: add example for: awscc_rds_db_cluster

--- a/templates/resources/rds_db_cluster.md.tmpl
+++ b/templates/resources/rds_db_cluster.md.tmpl
@@ -11,7 +11,7 @@ description: |-
 
 ## Example Usage
 
-### Basic Example - create AWS RDS cluster that specifies specific availability zones
+### Basic Example - create AWS RDS cluster that specifies availability zones
 {{ tffile (printf "examples/resources/%s/rds_db_cluster_create.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
