--- a/templates/resources/ec2_vpn_gateway.md.tmpl
+++ b/templates/resources/ec2_vpn_gateway.md.tmpl
@@ -15,7 +15,7 @@ description: |-
 
 {{ tffile (printf "examples/resources/%s/ec2_vpn_gateway.tf" .Name)}}
 
-### Second example - create VPN specifying the private Autonomous System Number (ASN) for the Amazon side of a BGP session.
+### Second example - create VPN specifying the private Autonomous System Number (ASN) for the Amazon side of a BGP session
 
 {{ tffile (printf "examples/resources/%s/ec2_vpn_gateway_asn.tf" .Name)}}
 
