rename basic_auth.tf to amplify_branch.tf, rerun make docs command

--- a/templates/resources/amplify_branch.md.tmpl
+++ b/templates/resources/amplify_branch.md.tmpl
@@ -20,7 +20,7 @@ To use {{.Name}} to create multiple branches:
 {{ tffile (printf "examples/resources/%s/multi_branch.tf" .Name)}}
 
 ### Basic Authentication
-{{ tffile (printf "examples/resources/%s/basic_auth.tf" .Name)}}
+{{ tffile (printf "examples/resources/%s/amplify_branch.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
