docs: add example for: awscc_rds_db_cluster_parameter_group

--- a/templates/resources/rds_db_cluster_parameter_group.md.tmpl
+++ b/templates/resources/rds_db_cluster_parameter_group.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### Basic example
-To create a simple db parameter group
+To create a RDS db cluster parameter group
 {{ tffile (printf "examples/resources/%s/rds_db_cluster_parameter_group.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
