docs: add example for: elasticbeanstalk_environment

--- a/templates/resources/elasticbeanstalk_environment.md.tmpl
+++ b/templates/resources/elasticbeanstalk_environment.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### Basic usage with Python platform
-In this example, we are going to create an AWS Elastic Beanstalk environment using Python platform. Please refer to [Python platform history](https://docs.aws.amazon.com/elasticbeanstalk/latest/platforms/platform-history-python.html) and use the current platform version and solution stack name. Also, please replace `example-aws-elasticbeanstalk-ec2-role` with an existing [instance profile](https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/iam-instanceprofile.html).
+In this example, we are going to create an AWS Elastic Beanstalk environment using Python platform. Please refer to [Python platform history](https://docs.aws.amazon.com/elasticbeanstalk/latest/platforms/platform-history-python.html) and use the current platform version and solution stack name. Also, please replace `example-aws-elasticbeanstalk-ec2-role` with your existing [instance profile](https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/iam-instanceprofile.html).
 {{ tffile (printf "examples/resources/%s/elasticbeanstalk_environment.tf" .Name)}}
 
 
