docs: add example for: ecr_public_repository

--- a/templates/resources/ecr_public_repository.md.tmpl
+++ b/templates/resources/ecr_public_repository.md.tmpl
@@ -9,6 +9,8 @@ description: |-
 
 {{ .Description | trimspace }}
 
+~> **NOTE:** This resource can only be used in the `us-east-1` region.
+
 ## Example Usage
 
 ### Basic usage
