--- a/templates/resources/config_config_rule.md.tmpl
+++ b/templates/resources/config_config_rule.md.tmpl
@@ -10,7 +10,7 @@ description: |-
 {{ .Description | trimspace }}
 ## Example Usage
 
-### Create a manage Config rule 
+### Create a Managed Config Rule 
 To create a Config rule
 {{ tffile (printf "examples/resources/%s/config_config_rule.tf" .Name)}}
 
