docs: awscc_s3_bucket - default encryption

--- a/templates/resources/s3_bucket.md.tmpl
+++ b/templates/resources/s3_bucket.md.tmpl
@@ -11,12 +11,22 @@ description: |-
 ## Example Usage
 
 ### Create a s3 bucket 
+
 To create a s3 bucket
+
 {{ tffile (printf "examples/resources/%s/s3_bucket.tf" .Name)}}
 
 ### Create a s3 bucket with public access restricted 
+
 To create a s3 bucket with public access restricted
+
 {{ tffile (printf "examples/resources/%s/s3_block_public.tf" .Name)}}
+
+### S3 bucket with default encryption AES256
+
+To create a s3 bucket with server side default encryption AES256
+
+{{ tffile (printf "examples/resources/%s/s3_bucket_encryption.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
