--- a/templates/resources/personalize_dataset_group.md.tmpl
+++ b/templates/resources/personalize_dataset_group.md.tmpl
@@ -12,11 +12,11 @@ description: |-
 ## Example Usage
 
 ### Basic Usage Example (Domain)
-Description about the first example
+Creation of Amazon Personalize dataset group using the video on demand domain
 {{ tffile (printf "examples/resources/%s/personalize_dataset_group_basic.tf" .Name)}}
 
 ### Dataset group creation with custom datasets and schemas 
-Description about the second example
+Creation of custom Amazon Personalize dataset group with interactions, users and items datasets with their custom schema 
 {{ tffile (printf "examples/resources/%s/personalize_dataset_group_custom.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
