--- a/templates/resources/gamelift_game_server_group.md.tmpl
+++ b/templates/resources/gamelift_game_server_group.md.tmpl
@@ -13,7 +13,8 @@ description: |-
 
 **IMPORTANT:** Amazon GameLift Game Server Groups can take some time to finish activating. This can lead to a long-running (>25min) `terraform apply` and is normal. 
 If you encounter errors with your game server group not activating successfully, check the troubleshooting steps listed in 
-[this doc](https://docs.aws.amazon.com/gamelift/latest/fleetiqguide/gsg-lifecycle.html#gsg-howitworks-lifecycle-gameservergroup).
+[this doc](https://docs.aws.amazon.com/gamelift/latest/fleetiqguide/gsg-lifecycle.html#gsg-howitworks-lifecycle-gameservergroup) as well as the required IAM cross-account 
+roles [documented here](https://docs.aws.amazon.com/gamelift/latest/fleetiqguide/gsg-iam-permissions-roles.html).
 
 To use {{.Name}} to create a GameLift FleetIQ Game Server Group:
 {{ tffile (printf "examples/resources/%s/gamelift_game_server_group.tf" .Name)}}
