--- a/internal/provider/generators/resource/schema.tmpl
+++ b/internal/provider/generators/resource/schema.tmpl
@@ -20,9 +20,8 @@ import (
 	"github.com/hashicorp/terraform-plugin-framework/resource/schema/{{ . }}"
 	{{- end}}
 	{{if .ImportFrameworkTypes }}"github.com/hashicorp/terraform-plugin-framework/types"{{end -}}
-	{{if .ImportFrameworkJSONTypes }}
-	"github.com/hashicorp/terraform-plugin-framework-jsontypes/jsontypes"
-	{{- end}}
+	{{if .ImportFrameworkJSONTypes }}"github.com/hashicorp/terraform-plugin-framework-jsontypes/jsontypes"{{- end}}
+	{{if .ImportFrameworkTimeTypes }}"github.com/hashicorp/terraform-plugin-framework-timetypes/timetypes"{{- end}}
 	"github.com/hashicorp/terraform-provider-awscc/internal/generic"
 	"github.com/hashicorp/terraform-provider-awscc/internal/registry"
 	{{if .ImportInternalValidate }}"github.com/hashicorp/terraform-provider-awscc/internal/validate"{{- end }}
