--- a/internal/provider/generators/singular-data-source/schema.tmpl
+++ b/internal/provider/generators/singular-data-source/schema.tmpl
@@ -11,9 +11,8 @@ import (
 	"github.com/hashicorp/terraform-plugin-framework/datasource"
 	"github.com/hashicorp/terraform-plugin-framework/datasource/schema"
 	{{if .ImportFrameworkTypes }}"github.com/hashicorp/terraform-plugin-framework/types"{{end -}}
-	{{if .ImportFrameworkJSONTypes }}
-	"github.com/hashicorp/terraform-plugin-framework-jsontypes/jsontypes"
-	{{- end}}
+	{{if .ImportFrameworkJSONTypes }}"github.com/hashicorp/terraform-plugin-framework-jsontypes/jsontypes"{{- end}}
+	{{if .ImportFrameworkTimeTypes }}"github.com/hashicorp/terraform-plugin-framework-timetypes/timetypes"{{- end}}
 	"github.com/hashicorp/terraform-provider-awscc/internal/generic"
 	"github.com/hashicorp/terraform-provider-awscc/internal/registry"
 )
