--- a/internal/provider/generators/resource/schema.tmpl
+++ b/internal/provider/generators/resource/schema.tmpl
@@ -36,6 +36,9 @@ import (
 	{{- end}}
 	"github.com/hashicorp/terraform-provider-awscc/internal/generic"
 	"github.com/hashicorp/terraform-provider-awscc/internal/registry"
+	{{- if .ImportInternalTypes }}
+	cctypes "github.com/hashicorp/terraform-provider-awscc/internal/types"
+	{{- end }}
 )
 
 func init() {
