--- a/templates/resources/billingconductor_pricing_rule.md.tmpl
+++ b/templates/resources/billingconductor_pricing_rule.md.tmpl
@@ -16,12 +16,16 @@ To create billing conductor with tags:
 {{ tffile (printf "examples/resources/%s/billingconductor_pricing_rule.tf" .Name)}}
 
 ### Second example
-To create billing conductor with tiering:
+To create billing conductor with the scope is tiering:
 {{ tffile (printf "examples/resources/%s/billingconductor_pricing_rule_tiering.tf" .Name)}}
 
-### Second example
-To create billing conductor with billing entity:
+### Third example
+To create billing conductor with scope is billing entity:
 {{ tffile (printf "examples/resources/%s/billingconductor_pricing_rule_billing_entity.tf" .Name)}}
+
+### Four example
+To create billing conductor with the scope is SKU:
+{{ tffile (printf "examples/resources/%s/billingconductor_pricing_rule_sku.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
