d-improve-greengrassv2_component_version

--- a/templates/resources/greengrassv2_component_version.md.tmpl
+++ b/templates/resources/greengrassv2_component_version.md.tmpl
@@ -12,7 +12,7 @@ description: |-
 ## Example Usage
 
 ### First Example
-To create a channel within a slack workspace  
+Create a component from a recipe
 {{ tffile (printf "examples/resources/%s/greengrassv2_component_version.tf" .Name)}}
 
 
