Update comment to reflect more the example usage

--- a/templates/resources/billingconductor_pricing_plan.md.tmpl
+++ b/templates/resources/billingconductor_pricing_plan.md.tmpl
@@ -11,8 +11,7 @@ description: |-
 
 ## Example Usage
 
-### First example
-This exampple create a billing plan and select the billing rule
+### Pricing plan with rules
 {{ tffile (printf "examples/resources/%s/billingconductor_pricing_plan.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
