--- a/templates/resources/billingconductor_pricing_plan.md.tmpl
+++ b/templates/resources/billingconductor_pricing_plan.md.tmpl
@@ -12,6 +12,7 @@ description: |-
 ## Example Usage
 
 ### Pricing plan with rules
+This example create a billing plan and assigned the billing rules
 {{ tffile (printf "examples/resources/%s/billingconductor_pricing_plan.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
