docs: add example for: awscc_sns_topic

--- a/templates/resources/sns_topic.md.tmpl
+++ b/templates/resources/sns_topic.md.tmpl
@@ -15,6 +15,10 @@ description: |-
 Description about the SNS-topic example
 {{ tffile (printf "examples/resources/%s/sns_topic.tf" .Name)}}
 
+### SNS-Fifo-topic example
+Description about the SNS-topic example
+{{ tffile (printf "examples/resources/%s/sns_topic_fifo.tf" .Name)}}
+
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
 
