--- a/templates/resources/apigateway_method.md.tmpl
+++ b/templates/resources/apigateway_method.md.tmpl
@@ -17,6 +17,18 @@ Creates a mock method GET
 
 {{ tffile (printf "examples/resources/%s/apigateway_method_mock.tf" .Name)}}
 
+### Basic use of API method response
+
+Basic use of API method response with only status code
+
+{{ tffile (printf "examples/resources/%s/apigateway_method_basic_example.tf" .Name)}}
+
+### Use of API method response with response parameters and response models
+
+API method repsosne using response models and response parameters
+
+{{ tffile (printf "examples/resources/%s/apigateway_method_model_example.tf" .Name)}}
+
 {{ .SchemaMarkdown | trimspace }}
 {{- if .HasImport }}
 
