--- a/templates/resources/apigateway_method.md.tmpl
+++ b/templates/resources/apigateway_method.md.tmpl
@@ -25,7 +25,7 @@ Basic use of API method response with only status code
 
 ### Use of API method response with response parameters and response models
 
-API method repsosne using response models and response parameters
+API method resposne using response models and response parameters
 
 {{ tffile (printf "examples/resources/%s/apigateway_method_model_example.tf" .Name)}}
 
