docs: updated example for awscc_ec2_gateway_route_table_association

--- a/templates/resources/ec2_gateway_route_table_association.md.tmpl
+++ b/templates/resources/ec2_gateway_route_table_association.md.tmpl
@@ -13,7 +13,7 @@ description: |-
 
 ### Internet Gateway Association
 
-Associate a internet gateway with a route table.
+Associate an internet gateway with a route table.
 {{ tffile (printf "examples/resources/%s/internet_gateway_association.tf" .Name)}}
 
 ### Virtual Private Gateway Association
