docs: added example for awscc_sagemaker_image

--- a/templates/resources/sagemaker_image.md.tmpl
+++ b/templates/resources/sagemaker_image.md.tmpl
@@ -11,7 +11,7 @@ description: |-
 
 ## Example Usage
 
-To create ec2 egress only internet_gateway
+To create a SageMaker Image resource.
 {{ tffile (printf "examples/resources/%s/sagemaker_image.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
