docs: added example for awscc_wafv2_web_acl_association

--- a/templates/resources/wafv2_web_acl_association.md.tmpl
+++ b/templates/resources/wafv2_web_acl_association.md.tmpl
@@ -11,6 +11,7 @@ description: |-
 
 ## Example Usage
 
+### API Gateway
 {{ tffile (printf "examples/resources/%s/wafv2_web_acl_association.tf" .Name)}}
 
 {{ .SchemaMarkdown | trimspace }}
