change file path for resource docs

--- a/internal/provider/generators/schema/imports.tmpl
+++ b/internal/provider/generators/schema/imports.tmpl
@@ -4,7 +4,7 @@
     {
         "resource": "{{ $e.ResourceName }}",
         "identifier": "{{ $e.Identifier }}",
-        "path": "../../examples/resources/{{ $e.ResourceName }}/import.sh"
+        "path": "./examples/resources/{{ $e.ResourceName }}/import.sh"
     }
 {{- end}}
 ]
