--- a/internal/provider/generators/resource/schema.tmpl
+++ b/internal/provider/generators/resource/schema.tmpl
@@ -40,6 +40,9 @@ import (
 	{{- if .ImportInternalDefaults }}
 	"github.com/hashicorp/terraform-provider-awscc/internal/defaults"
 	{{- end}}
+	{{- if .ImportInternalValidators }}
+    fwvalidators "github.com/hashicorp/terraform-provider-awscc/internal/validators"
+    {{- end}}
 	"github.com/hashicorp/terraform-provider-awscc/internal/generic"
 	"github.com/hashicorp/terraform-provider-awscc/internal/registry"
 )
